--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>CAT</title>
+		<meta name="summary" content="This website is about 4 cats">
+		<meta name="author" content="郭宥磊, 109403017">
+		<link rel="stylesheet" href="mystyle.CSS">
+	</head>
+	<body>
+		<div>
+			<center>
+				<h1>四隻貓咪</h1>
+			</center>
+		</div>
+		<div>
+			<hr color="#fff8dc" size="10" />
+			<br>
+		</div>
+		<div>
+				<h2>先上照片:</h2>
+				<img src="a1.jpg" alt="photo1" height="200">
+				<img src="a2.jpg" alt="photo2" height="200">
+				<img src="a3.jpg" alt="photo3" height="200">
+				<img src="a4.jpg" alt="photo4" height="200">
+				<h2>高清無碼大圖<span style="color:red">(請點連結)</span>:</h2>
+				<ol>
+					<li><a href="a1.jpg" target="_blank">photo1</a></li>
+					<li><a href="a2.jpg" target="_blank">photo2</a></li>
+					<li><a href="a3.jpg" target="_blank">photo3</a></li>
+					<li><a href="a4.jpg" target="_blank">photo4</a></li>
+					<li><a href="https://www.youtube.com/watch?v=072tU1tamd0&ab_channel=Majima" target="_blank">photo5<span style="color:red">(bunus)</span></a></li>
+				</ol>
+		</div>
+		<div>
+			<table border="1">
+				<tr>
+				<th colspan="3">照片對照表</th>	
+				</tr>
+				<tr>
+					<th>貓咪</th>
+					<th>照片</th>
+					<th>拍攝地</th>
+				</tr>
+				<tr>
+					<td>瞇瞇眼</td>
+					<td>photo1</td>
+					<td>麻六甲聖保羅山</td>
+				</tr>
+				<tr>
+					<td>大胖橘</td>
+					<td>photo2</td>
+					<td>猴硐貓村</td>
+				</tr>
+				<tr>
+					<td>圓滾滾</td>
+					<td>photo3</td>
+					<td>哈爾濱東正教堂</td>
+				</tr>
+				<tr>
+					<td>小釘鐺</td>
+					<td>photo4</td>
+					<td>桃園某火鍋店</td>
+				</tr>
+			</table>
+		</div>
+		
+	</body>
+</html>
