--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>CAT</title>
-		<meta name="summary" content="This website is about 4 cats">
+		<title>cv</title>
+		<meta name="summary" content="This website is my CV">
 		<meta name="author" content="郭宥磊, 109403017">
 		<link rel="stylesheet" href="mystyle.CSS">
 	</head>
 	<body>
 		<div>
 			<center>
-				<h1>四隻貓咪</h1>
+				<h1>郭宥磊</h1>
 			</center>
 		</div>
 		<div>
@@ -17,49 +17,52 @@
 			<br>
 		</div>
 		<div>
-				<h2>先上照片:</h2>
-				<img src="a1.jpg" alt="photo1" height="200">
-				<img src="a2.jpg" alt="photo2" height="200">
-				<img src="a3.jpg" alt="photo3" height="200">
-				<img src="a4.jpg" alt="photo4" height="200">
-				<h2>高清無碼大圖<span style="color:red">(請點連結)</span>:</h2>
+				<h2>EXPERIENCE</h2>
 				<ol>
-					<li><a href="a1.jpg" target="_blank">photo1</a></li>
-					<li><a href="a2.jpg" target="_blank">photo2</a></li>
-					<li><a href="a3.jpg" target="_blank">photo3</a></li>
-					<li><a href="a4.jpg" target="_blank">photo4</a></li>
-					<li><a href="https://www.youtube.com/watch?v=072tU1tamd0&ab_channel=Majima" target="_blank">photo5<span style="color:red">(bunus)</span></a></li>
+					<li><a href="https://www.roommitw.com/" target="_blank">Roommi</a>實習擔任業務&平台操作管理</li>
+					<li>服飾雜貨店短期打工</li>
+				</ol>	
+				<h2>EDUCATION</h2>
+				<P>中央大學資管系(2020~)</P>
+				<h2>EXPERIENCE</h2>
+				<ol>
+					<li>基礎程式語言(C, Java, html, Python...)</li>
+					<li>Microsoft Office (MS Word, Excel, Powerpoint)</li>
+					<li>軟硬體修錯</li>
+				</ol>
+				<h2>PERSONAL SKILLS</h2>
+				<ol>
+					<li>善組織舉辦活動</li>
+					<li>善與人交流討論case</li>
+					<li>曾任社團輔導股長，善疏導他人情緒</li>
 				</ol>
 		</div>
 		<div>
 			<table border="1">
 				<tr>
-				<th colspan="3">照片對照表</th>	
+				<th colspan="2">程式語言能力</th>	
 				</tr>
 				<tr>
-					<th>貓咪</th>
-					<th>照片</th>
-					<th>拍攝地</th>
+					<th>程式語言</th>
+					<th>能力</th>
+					
 				</tr>
 				<tr>
-					<td>瞇瞇眼</td>
-					<td>photo1</td>
-					<td>麻六甲聖保羅山</td>
+					<td>C/C++</td>
+					<td>初階</td>
+					
 				</tr>
 				<tr>
-					<td>大胖橘</td>
-					<td>photo2</td>
-					<td>猴硐貓村</td>
+					<td>Java</td>
+					<td>入門</td>
 				</tr>
 				<tr>
-					<td>圓滾滾</td>
-					<td>photo3</td>
-					<td>哈爾濱東正教堂</td>
+					<td>Python</td>
+					<td>入門</td>
 				</tr>
 				<tr>
-					<td>小釘鐺</td>
-					<td>photo4</td>
-					<td>桃園某火鍋店</td>
+					<td>hyml</td>
+					<td>入門</td>
 				</tr>
 			</table>
 		</div>
