--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 					<li>曾任社團輔導股長，善疏導他人情緒</li>
 				</ol>
 		</div>
+		<script>
+			Function mf() {
+				document.getElementById(“click”).innerHTML=”THANK YOU FOR READING.”;
+			}
+		</script>
 		<div>
 			<table border="1">
 				<tr>
